--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.22.0",
     "eslint-config-next": "13.4.3",
-    "next": "^13.4.4",
+    "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
